--- a/source/sass/blocks/request.scss
+++ b/source/sass/blocks/request.scss
@@ -31,3 +31,9 @@
     display: block;
   }
 }
+
+
+
+@media (min-width: $desktop) {
+
+}
